[B]Version 0.0.1 - 23/1/2015[/B]
-First version of the module
